--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Grades#index</h1>
-<p>Find me in app/views/grades/index.html.erb</p>
+<h1>Achievement#index</h1>
+<p>Find me in app/views/achievements/index.html.erb</p>
