--- a/app/views/grades/create.html.erb
+++ b/app/views/grades/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Grades#create</h1>
-<p>Find me in app/views/grades/create.html.erb</p>
+<h1>Achievement#create</h1>
+<p>Find me in app/views/achievments/create.html.erb</p>
