--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Grades#show</h1>
-<p>Find me in app/views/grades/show.html.erb</p>
+<h1>Achievement#show</h1>
+<p>Find me in app/views/achievements/show.html.erb</p>
