--- a/app/views/grades/update.html.erb
+++ b/app/views/grades/update.html.erb
@@ -1,2 +1,2 @@
-<h1>Grades#update</h1>
-<p>Find me in app/views/grades/update.html.erb</p>
+<h1>Achievements#update</h1>
+<p>Find me in app/views/achivements/update.html.erb</p>
